--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h1,h2,h3,h4,h5,h6 {
 /* header */
 .navbar {
     position: fixed;
+    top: 0;
     border: 1px solid black;
     width: 100%;
     height: 60px;
@@ -58,4 +59,17 @@ h1,h2,h3,h4,h5,h6 {
     letter-spacing: 1px;
     text-decoration: none;
     font-weight: 500;
+}
+/* general section */
+.section {
+    /* width: 100%;
+    margin-top: 100px;
+    padding: 0 10%;
+    background-color: plum;
+    border: 1px solid black; */
+}
+
+/* hero-section */
+.hero {
+
 }
