--- a/style.css
+++ b/style.css
@@ -61,15 +61,39 @@ h1,h2,h3,h4,h5,h6 {
     font-weight: 500;
 }
 /* general section */
+
 .section {
-    /* width: 100%;
+    width: 100%;
     margin-top: 100px;
     padding: 0 10%;
+
+
+    border: 0.5px solid black;
     background-color: plum;
-    border: 1px solid black; */
+
 }
 
-/* hero-section */
-.hero {
+/* hero section */
+.section.hero{
+    color: plum;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    
+}
+.hero-container {
+    border: 1px solid black;
+    width: 50%;
+    
+}
 
+.hero-heading {
+    font-size: 100px;
+    color: black;
+    text-transform: capitalize;
+}
+.hero-image {
+    border: 1px solid black;
+    border-radius: 50%;
 }
