--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ h1,h2,h3,h4,h5,h6 {
 .nav-container{
     display: flex;
     list-style: none;
+    border: 1px solid black;
 }
 .nav-container:last-child {
     padding: 0 3%;
@@ -69,31 +70,43 @@ h1,h2,h3,h4,h5,h6 {
 
 
     border: 0.5px solid black;
-    background-color: plum;
-
 }
+
 
 /* hero section */
 .section.hero{
-    color: plum;
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    
 }
 .hero-container {
     border: 1px solid black;
     width: 50%;
-    
 }
+.hero-text {
+    color: black;
+    font-size: 1rem;
+    margin: 50px 0;
+    border: 1px solid black;
 
+}
 .hero-heading {
-    font-size: 100px;
+    font-size: 5rem;
     color: black;
     text-transform: capitalize;
 }
 .hero-image {
     border: 1px solid black;
     border-radius: 50%;
+}
+.btn {
+    text-decoration: none;
+    font-weight: 5600;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.25rem 5rem;
+    background-color: #4051d0;
+    color: #fff;
+    border: none;
+    border-radius: 30px;
 }
