--- a/assets/style.css
+++ b/assets/style.css
@@ -27,7 +27,6 @@ h1,h2,h3,h4,h5,h6 {
 .navbar {
     position: fixed;
     top: 0;
-    border: 1px solid black;
     width: 100%;
     height: 60px;
     display: flex;
@@ -38,7 +37,7 @@ h1,h2,h3,h4,h5,h6 {
     background: linear-gradient(130deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
     backdrop-filter: blur(10px);
     border: 1px solid white;
-    box-shadow: 1px 5px 20px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 5px 20px 0 rgba(0, 0, 0, 0.1);
 
 }
 #logo {
@@ -48,7 +47,6 @@ h1,h2,h3,h4,h5,h6 {
 .nav-container{
     display: flex;
     list-style: none;
-    border: 1px solid black;
 }
 .nav-container:last-child {
     padding: 0 3%;
@@ -71,27 +69,23 @@ h1,h2,h3,h4,h5,h6 {
     width: 100%;
     margin-top: 100px;
     padding: 0 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 
-    border: 0.5px solid black;
 }
 
 
 /* hero section */
-.section.hero{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+
 .hero-container {
-    border: 1px solid black;
     width: 50%;
 }
 .hero-text {
     color: black;
     font-size: 1rem;
     margin: 50px 0;
-    border: 1px solid black;
 
 }
 .hero-heading {
@@ -99,9 +93,11 @@ h1,h2,h3,h4,h5,h6 {
     color: black;
     text-transform: capitalize;
 }
+
 .hero-image {
     border: 1px solid black;
     border-radius: 50%;
+    box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.2) ;
 }
 .btn {
     text-decoration: none;
@@ -109,8 +105,18 @@ h1,h2,h3,h4,h5,h6 {
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.25rem 5rem;
-    background-color: #4051d0;
+    background-color: #4051d0;;
     color: #fff;
     border: none;
     border-radius: 30px;
+}
+
+/* about section */
+.section.about {
+    border: 1px solid black;
+    background-color: plum;
+}
+.heading {
+    text-transform: capitalize;
+    font-family: 'Playfair Display', serif;
 }
