--- a/assets/style.css
+++ b/assets/style.css
@@ -32,6 +32,7 @@ h1,h2,h3,h4,h5,h6 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 10;
     
     /* below is code for a glass effect*/
     background: linear-gradient(130deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
@@ -67,32 +68,36 @@ h1,h2,h3,h4,h5,h6 {
 
 .section {
     width: 100%;
+    height: auto;
     margin-top: 100px;
-    padding: 0 10%;
+    padding: 50px 10%;
     display: flex;
-    align-items: center;
     justify-content: center;
-
-
+    align-items: center;
 }
 
 
 /* hero section */
+.section.hero{
+    position: relative;
+}
 
 .hero-container {
     width: 50%;
 }
-.hero-text {
-    color: black;
-    font-size: 1rem;
-    margin: 50px 0;
-
-}
 .hero-heading {
     font-size: 5rem;
+    font-weight: 800;
     color: black;
     text-transform: capitalize;
 }
+.hero-text {
+    color: black;
+    font-size: 1.2rem;
+    margin: 50px 0;
+
+}
+
 
 .hero-image {
     border: 1px solid black;
@@ -112,11 +117,45 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 /* about section */
-.section.about {
+.about {
     border: 1px solid black;
     background-color: plum;
+    display: flex;
+    flex-direction: column;
 }
 .heading {
     text-transform: capitalize;
     font-family: 'Playfair Display', serif;
+    font-size: 3rem;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
 }
+.about-text {
+    font-size: 1.2rem;
+    text-align: center;
+    margin: 30px;
+}
+.about-image {
+    border: 1px solid black;
+    border-radius: 50%;
+    box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.2) ;
+}
+ .about-container {
+    margin: 150px 0 100px;
+    width: 100%;
+    display: grid;
+    grid-template-columns:40% 60%;
+    grid-gap: 50px;
+    border: 1px solid black;
+}
+.left,
+.right {
+    position: relative;
+    border: 1px solid black;
+}
+.about-p{
+    font-size: 1rem;
+    line-height: 30px;
+    margin-bottom: 50pxkk;
+} 
