--- a/assets/style.css
+++ b/assets/style.css
@@ -64,6 +64,7 @@ h1,h2,h3,h4,h5,h6 {
 .nav-link:hover{
     color: #4051d0;
 }
+
 /* general section */
 
 .section {
@@ -138,7 +139,7 @@ h1,h2,h3,h4,h5,h6 {
     border-radius: 50%;
     box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.2) ;
 }
- .about-container {
+.about-container {
     padding: 0 15%;
     margin: 20px;
     width: 100%;
@@ -156,7 +157,25 @@ h1,h2,h3,h4,h5,h6 {
     margin-bottom: 50pxkk;
 } 
 
-/* skill-set section */
-.skill-section{
-
+/* skills section */
+.skills {
+    display: flex;
+    flex-direction: column;
+}
+.skill-container {
+    position: relative;
+    margin-top: 100px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+}
+.card {
+    height: 150px;
+    width: 150px;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Playfair Display', serif;
+    
 }
