--- a/assets/style.css
+++ b/assets/style.css
@@ -173,3 +173,12 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 /* project section */
+.project-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 100px;
+}
+
+.subheading {
+    font-size: 2rem;
+}
