--- a/assets/style.css
+++ b/assets/style.css
@@ -260,3 +260,18 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 /* footer */
+.social-icons{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+.social-icons a{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:plum ;
+    margin: 0px 10px;
+    border-radius: 50%;
+}
