--- a/assets/style.css
+++ b/assets/style.css
@@ -1,286 +1,287 @@
 /* google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap");
 
 /* universal selector */
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    /* scroll-behavior: smooth; */
+  /* scroll-behavior: smooth; */
 }
 
 body {
-    width: 100%;
-    position: relative;
-    font-family: 'Roboto', sans-serif;
+  width: 100%;
+  position: relative;
+  font-family: "Roboto", sans-serif;
 }
-h1,h2,h3,h4,h5,h6 {
-    font-family: 'Playfair Display', serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Playfair Display", serif;
 }
 
 /* insert colour scheme below */
 
 /* header */
 .navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 55px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 10;
-    
-    /* below is code for a glass effect*/
-    background: linear-gradient(130deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
-    backdrop-filter: blur(10px);
-    border: 1px solid white;
-    box-shadow: 1px 5px 20px 0 rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 55px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 10;
+
+  /* below is code for a glass effect*/
+  background: linear-gradient(130deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
+  backdrop-filter: blur(10px);
+  border: 1px solid white;
+  box-shadow: 1px 5px 20px 0 rgba(0, 0, 0, 0.1);
 }
 #logo {
-    text-transform: capitalize;
-    padding: 0 3%;
+  text-transform: capitalize;
+  padding: 0 3%;
 }
-.nav-container{
-    display: flex;
-    list-style: none;
+.nav-container {
+  display: flex;
+  list-style: none;
 }
 .nav-container:last-child {
-    padding: 0 3%;
+  padding: 0 3%;
 }
 .nav-link {
-    color: black;
-    padding: 1rem;
-    font-size: .75rem;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    text-decoration: none;
-    font-weight: 500;
+  color: black;
+  padding: 1rem;
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-decoration: none;
+  font-weight: 500;
 }
-.nav-link:hover{
-    color: #4051d0;
+.nav-link:hover {
+  color: #4051d0;
 }
-
-
 
 /* general section */
 
 .section {
-    width: 100%;
-    /* min-height = 100% view hight - 55px ( fixed navbar height) */
-    min-height: calc(100vh - 55px);
-    height: auto;
-    margin-top: 100px;
-    padding: 50px 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  width: 100%;
+  /* min-height = 100% view hight - 55px ( fixed navbar height) */
+  min-height: calc(100vh - 55px);
+  height: auto;
+  margin-top: 100px;
+  padding: 50px 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-
 /* hero section */
-.section.hero{
-    position: relative;
-    flex-direction: row;
+.section.hero {
+  position: relative;
+  flex-direction: row;
 }
 
 .hero-container {
-    width: 50%;
+  width: 50%;
 }
 .hero-heading {
-    font-size: 5rem;
-    font-weight: 800;
-    color: black;
-    text-transform: capitalize;
+  font-size: 5rem;
+  font-weight: 800;
+  color: black;
+  text-transform: capitalize;
 }
 .hero-text {
-    color: black;
-    font-size: 1.2rem;
-    margin: 50px 0;
+  color: black;
+  font-size: 1.2rem;
+  margin: 50px 0;
 }
-
 
 .hero-image {
-    border: 1px solid black;
-    border-radius: 50%;
-    box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.2) ;
+  border: 1px solid black;
+  border-radius: 50%;
+  box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.2);
 }
 .btn {
-    text-decoration: none;
-    font-weight: 5600;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    padding: 1.25rem 5rem;
-    background-color: #4051d0;;
-    color: #fff;
-    border: none;
-    border-radius: 30px;
+  text-decoration: none;
+  font-weight: 5600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 1.25rem 5rem;
+  background-color: #4051d0;
+  color: #fff;
+  border: none;
+  border-radius: 30px;
 }
 
 /* about section */
 .heading {
-    text-transform: capitalize;
-    font-family: 'Playfair Display', serif;
-    font-size: 3rem;
-    display: flex;
-    justify-content: center;
+  text-transform: capitalize;
+  font-family: "Playfair Display", serif;
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
 }
 .intro-text {
-    font-size: 1rem;
-    text-align: center;
-    margin: 20px;
+  font-size: 1rem;
+  text-align: center;
+  margin: 20px;
 }
 .about-image {
-    border-radius: 50%;
-    box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.2) ;
+  border-radius: 50%;
+  box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.2);
 }
 .about-container {
-    padding: 0 15%;
-    margin: 20px;
-    width: 100%;
-    display: grid;
-    grid-template-columns:40% 60%;
-    grid-gap: 50px;
+  padding: 0 15%;
+  margin: 20px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  grid-gap: 50px;
 }
 .left,
 .right {
-    position: relative;
+  position: relative;
 }
-.about-p{
-    font-size: 1rem;
-    line-height: 30px;
-    margin-bottom: 50pxkk;
-} 
+.about-p {
+  font-size: 1rem;
+  line-height: 30px;
+  margin-bottom: 50pxkk;
+}
 
 /* skills section */
 .skill-container {
-    position: relative;
-    margin-top: 100px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 50px;
+  position: relative;
+  margin-top: 100px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
 }
 .card {
-    height: 150px;
-    width: 150px;
-    border: 1px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Playfair Display', serif;
-    
+  height: 150px;
+  width: 150px;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Playfair Display", serif;
 }
 
 /* project section */
 /* main project grid */
 .project-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 100px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 100px;
 }
 .project-container .large {
-    grid-column: span 2;
-    border: 1px solid black;
+  grid-column: span 2;
+  border: 1px solid black;
 }
 
 /* other project grid */
 .subheading {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 .archive-project-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 100px;
-    margin: 100px 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 100px;
+  margin: 100px 0;
 }
-.archive-project-card{
-    position: relative;
-    display: block;
-    cursor: pointer;
+.archive-project-card {
+  position: relative;
+  display: block;
+  cursor: pointer;
 }
-.archive-project-title{
-    position: absolute;
-    top: 0; 
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    padding: 10px;
-    text-transform: capitalize;
+.archive-project-title {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 10px;
+  text-transform: capitalize;
 }
 .more-btn {
-    padding: 12px 20px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    background-color: #4051d0;;
-    color: #fff;
-    border: none;
-    border-radius: 30px;
+  padding: 12px 20px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background-color: #4051d0;
+  color: #fff;
+  border: none;
+  border-radius: 30px;
 }
 
 /* conact section */
 .contact-form {
-    width: 100%;
-    margin-top: 100px;
+  width: 100%;
+  margin-top: 100px;
 }
-.contact-form input, .message{
-    width: 100%;
-    padding: 20px;
-    border-radius: 3px;
-    margin: 20px 0;
-    text-transform: capitalize;
+.contact-form input,
+.message {
+  width: 100%;
+  padding: 20px;
+  border-radius: 3px;
+  margin: 20px 0;
+  text-transform: capitalize;
 
-    /* glass effect */
-    background: linear-gradient(130deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
-    backdrop-filter: blur(10px);
-    border: 1px solid white;
-    box-shadow: 1px 5px 20px 0 rgba(0, 0, 0, 0.1);
+  /* glass effect */
+  background: linear-gradient(130deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
+  backdrop-filter: blur(10px);
+  border: 1px solid white;
+  box-shadow: 1px 5px 20px 0 rgba(0, 0, 0, 0.1);
 }
 .message {
-    height: 200px;
+  height: 200px;
 }
 .name {
-    display: flex;
+  display: flex;
 }
 .name input {
-    width: 50%;
-    margin: 0;
+  width: 50%;
+  margin: 0;
 }
 .contact-btn {
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    padding: 1.25rem 5rem;
-    background-color: #4051d0;;
-    color: #fff;
-    border: none;
-    border-radius: 30px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 1.25rem 5rem;
+  background-color: #4051d0;
+  color: #fff;
+  border: none;
+  border-radius: 30px;
 }
 
 /* footer */
 .footer {
-    width: 100vw;
-    padding: 30px;
-    background-color: lightblue;
+  width: 100vw;
+  padding: 30px;
+  background-color: lightblue;
 }
 
-.social-icons{
-    display: flex;
-    justify-content: center;
-    margin-top: 100px;
+.social-icons {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
 }
-.social-icons a{
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color:plum ;
-    margin: 0px 10px;
-    border-radius: 50%;
+.social-icons a {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: plum;
+  margin: 0px 10px;
+  border-radius: 50%;
 }
