--- a/assets/style.css
+++ b/assets/style.css
@@ -69,6 +69,9 @@ h6 {
   color: #4051d0;
 }
 
+
+
+
 /* general section */
 
 .section {
@@ -284,4 +287,39 @@ h6 {
   background-color: plum;
   margin: 0px 10px;
   border-radius: 50%;
+}
+
+/* @media screen and (max-width: 768px) {
+  body {
+    background: lightblue;
+  }
+  .hamburger {
+    position: relative;
+    display: block;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    appearance: none;
+    background: none;
+    border: none;
+    margin: 0 5vw;
+  }
+
+  .hamburger .bar,
+  .hamburger:after,
+  .hamburger:before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 5px;
+    background-color: black;
+    margin: 6px 6px;
+    transition: 0.4s;
+  }
+  .nav-container {
+    display: none;
+  }
+} */
+
+@media (max-width: 1024px) {
 }
