--- a/assets/style.css
+++ b/assets/style.css
@@ -69,9 +69,6 @@ h6 {
   color: #4051d0;
 }
 
-
-
-
 /* general section */
 
 .section {
@@ -289,37 +286,31 @@ h6 {
   border-radius: 50%;
 }
 
-/* @media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   body {
-    background: lightblue;
+    background-color: lightblue;
   }
-  .hamburger {
-    position: relative;
-    display: block;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    appearance: none;
-    background: none;
-    border: none;
-    margin: 0 5vw;
-  }
+}
 
-  .hamburger .bar,
-  .hamburger:after,
-  .hamburger:before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 5px;
-    background-color: black;
-    margin: 6px 6px;
-    transition: 0.4s;
-  }
-  .nav-container {
-    display: none;
-  }
-} */
-
-@media (max-width: 1024px) {
+/* hamburger menu created using the below tutorial as a framework: 
+https://www.youtube.com/watch?v=OFKBep95lb4 */
+.hamburger {
+  position: relative;
+  display: block;
+  width: 30px;
+  cursor: pointer;
+  height: 30px;
+  appearance: none;
+  background: none;
+  border: none;
+}
+.hamburger .menu,
+.hamburger:after {
+  content: "";
+  display: block;
+  color: black;
+  width: 100%;
+  height: 5px;
+  background-color: black;
+  margin: 5px 0;
 }
