--- a/assets/style.css
+++ b/assets/style.css
@@ -292,6 +292,7 @@ h6 {
   }
 }
 
+/* hamburger menu */
 /* hamburger menu created using the below tutorial as a framework: 
 https://www.youtube.com/watch?v=OFKBep95lb4 */
 .hamburger {
@@ -299,7 +300,6 @@ https://www.youtube.com/watch?v=OFKBep95lb4 */
   display: block;
   width: 30px;
   cursor: pointer;
-  height: 30px;
   appearance: none;
   background: none;
   border: none;
@@ -308,9 +308,15 @@ https://www.youtube.com/watch?v=OFKBep95lb4 */
 .hamburger:after {
   content: "";
   display: block;
-  color: black;
+  color: #4051d0;
   width: 100%;
   height: 5px;
-  background-color: black;
+  background-color: #4051d0;
   margin: 5px 0;
+}
+.hamburger.active .menu {
+  transform: rotate(-45deg) translate(-9px, -6px);
+}
+.hamburger.active::after {
+  transform: rotate(45deg) translate(-13px, 2px);
 }
