--- a/assets/style.css
+++ b/assets/style.css
@@ -287,36 +287,38 @@ h6 {
 }
 
 @media (max-width: 768px) {
-  body {
-    background-color: lightblue;
-  }
-}
-
-/* hamburger menu */
-/* hamburger menu created using the below tutorial as a framework: 
+  /* hamburger menu */
+  /* hamburger menu created using the below tutorial as a framework: 
 https://www.youtube.com/watch?v=OFKBep95lb4 */
-.hamburger {
-  position: relative;
-  display: block;
-  width: 30px;
-  cursor: pointer;
-  appearance: none;
-  background: none;
-  border: none;
-}
-.hamburger .menu,
-.hamburger:after {
-  content: "";
-  display: block;
-  color: #4051d0;
-  width: 100%;
-  height: 5px;
-  background-color: #4051d0;
-  margin: 5px 0;
-}
-.hamburger.active .menu {
-  transform: rotate(-45deg) translate(-9px, -6px);
-}
-.hamburger.active::after {
-  transform: rotate(45deg) translate(-13px, 2px);
+  .hamburger {
+    position: relative;
+    display: block;
+    width: 30px;
+    cursor: pointer;
+    appearance: none;
+    background: none;
+    border: none;
+  }
+  .hamburger .menu,
+  .hamburger:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 5px;
+    background-color: black;
+    margin: 5px 0;
+    transition: 0.4s;
+  }
+  .hamburger.active .menu {
+    transform: rotate(90deg) translate(10px, 0px);
+    transition: 0.4s;
+  }
+  .hamburger.active::after {
+    transform: rotate(180deg) translate(0px, 0px);
+    transition: 0.4s;
+  }
+
+  .nav-container {
+    display: none;
+  }
 }
