--- a/assets/style.css
+++ b/assets/style.css
@@ -286,39 +286,66 @@ h6 {
   border-radius: 50%;
 }
 
+/* design for mobile view */
+
 @media (max-width: 768px) {
+  body {
+    font-size: 0.875rem;
+  }
+
   /* hamburger menu */
-  /* hamburger menu created using the below tutorial as a framework: 
+  /* hamburger menu created using the below tutorial as a reference: 
 https://www.youtube.com/watch?v=OFKBep95lb4 */
   .hamburger {
-    position: relative;
-    display: block;
-    width: 30px;
+    position: absolute;
+    right: 5vw;
+    width: 35px;
     cursor: pointer;
-    appearance: none;
     background: none;
     border: none;
   }
+
   .hamburger .menu,
   .hamburger:after {
     content: "";
     display: block;
-    width: 100%;
-    height: 5px;
+    height: 3px;
     background-color: black;
     margin: 5px 0;
     transition: 0.4s;
   }
+
+  /* PROBLEM IN NAV VISBILITY REQUIRES RESOLVING */
+
+  /* 'active' hamburger menu styling */
+  /* 'transform' property below rotates 'active' hamburger class to 90 degrees creating a + icon */
   .hamburger.active .menu {
     transform: rotate(90deg) translate(10px, 0px);
     transition: 0.4s;
+    background-color: #4051d0;
   }
   .hamburger.active::after {
     transform: rotate(180deg) translate(0px, 0px);
     transition: 0.4s;
+    background-color: #4051d0;
   }
-
+  /* mobile navigation menu formatting */
   .nav-container {
-    display: none;
+    position: absolute;
+    /* top 55px as navbar is 55px */
+    top: 55px;
+    width: 100%;
+    flex-direction: column;
+    transition: 0.5s;
+    opacity: 0;
+    background: #fff;
+  }
+  .nav-container.visible {
+    opacity: 1;
+  }
+  .nav-link {
+    text-align: center;
+    display: block;
+    height: 60px;
   }
 }
