--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 /* google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap");
 
-/* universal selector */
+/* ============ Universal & Element Styling ================== */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,24 +11,17 @@
 html {
   /* scroll-behavior: smooth; */
 }
-
 body {
-  width: 100%;
-  position: relative;
   font-family: "Roboto", sans-serif;
 }
 h1,
 h2,
 h3,
-h4,
-h5,
-h6 {
+h4 {
   font-family: "Playfair Display", serif;
 }
 
-/* insert colour scheme below */
-
-/* header */
+/* ============ Header Styling ================== */
 .navbar {
   position: fixed;
   top: 0;
@@ -37,11 +30,12 @@ h6 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /* z-index ensures the navbar remains fixed at the top */
   z-index: 10;
 
   /* below is code for a glass effect*/
   background: linear-gradient(130deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(20px);
   border: 1px solid white;
   box-shadow: 1px 5px 20px 0 rgba(0, 0, 0, 0.1);
 }
@@ -69,50 +63,28 @@ h6 {
   color: #4051d0;
 }
 
-/* general section */
+/* ============ General Main Content ================== */
 
 .section {
   width: 100%;
-  /* min-height = 100% view hight - 55px ( fixed navbar height) */
+  /* min-height = 100% view hight - 55px (fixed navbar height) */
   min-height: calc(100vh - 55px);
-  height: auto;
   margin-top: 50px;
   padding: 50px 10%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
 }
 
-/* hero section */
-.section.hero {
-  position: relative;
-  flex-direction: row;
-}
-
+/* 
+container not currently in use
 .hero-container {
   width: 50%;
-}
-.hero-heading {
-  font-size: 5rem;
-  font-weight: 800;
-  color: black;
-  text-transform: capitalize;
-}
-.hero-text {
-  color: black;
-  font-size: 1.2rem;
-  margin: 50px 0;
-}
+} */
 
-.hero-image {
-  border: 1px solid black;
-  border-radius: 50%;
-  box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.2);
-}
 .btn {
   text-decoration: none;
-  font-weight: 5600;
   text-transform: uppercase;
   letter-spacing: 1px;
   padding: 1.25rem 5rem;
@@ -121,12 +93,44 @@ h6 {
   border: none;
   border-radius: 30px;
 }
+.btn:hover {
+  background-color: #293488;
+}
+.btn:active {
+  background-color: #ca299d;
+}
+
+
+
+
+
+/* ============ Hero Styling ================== */
+
+.hero-heading {
+  font-size: 5rem;
+  color: black;
+  text-transform: capitalize;
+}
+.hero-text {
+  color: black;
+  font-weight: 500;
+  font-size: 1.2rem;
+  margin: 50px 0;
+}
+.hero-avatar {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.3);
+}
+
+/* ============ About Styling ================== */
 
 /* about section */
 .heading {
   text-transform: capitalize;
   font-family: "Playfair Display", serif;
-  font-size: 3rem;
+  font-size: 3.5rem;
   display: flex;
   justify-content: center;
 }
@@ -140,9 +144,10 @@ h6 {
   box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.2);
 }
 .about-container {
+  /* set width to 100% of screen size */
+  width: 100%;
   padding: 0 15%;
   margin: 20px;
-  width: 100%;
   display: grid;
   grid-template-columns: 40% 60%;
   grid-gap: 50px;
@@ -159,61 +164,87 @@ h6 {
 
 /* skills section */
 .skill-container {
+  /* set width to 100% of screen size */
+  /* width: 100%; */
+  position: relative;
   margin-top: 50px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 50px;
 }
-.card {
+.skill-card {
   height: 150px;
   width: 150px;
+
   border: 1px solid black;
   /* below-code formats card-text */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: "Playfair Display", serif;
+  text-align: center;
+  position: relative;
   font-weight: bold;
+}
+.skill-large {
+  grid-column: span 2;
+}
+.skill {
+  font-size: 1.5rem;
+  color: #4051d0;
+  line-height: 150px;
+}
+.skill-card:hover {
+  background: rgba(0, 0, 0, 0.7);
 }
 
 /* project section */
-
 .project-container {
+  /* set width to 100% of screen size */
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 50px;
   margin-top: 50px;
 }
-.project-container .large {
-  grid-column: span 3;
-  background: lightgreen;
-}
-
-
-.archive-project-card {
+.project-card {
   position: relative;
   display: block;
   cursor: pointer;
 }
-.archive-project-title {
-  position: absolute;
-  top: 0;
+.project-card img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
+}
+.project-large {
+  grid-column: span 2;
+  border: 1px solid black;
+}
+.project-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-  padding: 10px;
+  align-items: center;
+  transition: 0.4s;
   text-transform: capitalize;
+  opacity: 0;
 }
-.more-btn {
-  padding: 12px 20px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  background-color: #4051d0;
-  color: #fff;
-  border: none;
-  border-radius: 30px;
+.project-title {
+  color: white;
+  font-weight: 300;
+  font-size: 2.5rem;
+  text-align: center;
+}
+.project-description {
+  position: absolute;
+  bottom: 20px;
+  opacity: 0.6;
+  width: 90%;
+}
+.project-content:hover {
+  opacity: 1;
 }
 
 /* conact section */
@@ -237,16 +268,6 @@ h6 {
 }
 .message {
   height: 200px;
-}
-.contact-btn {
-  font-weight: 500;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  padding: 1.25rem 5rem;
-  background-color: #4051d0;
-  color: #fff;
-  border: none;
-  border-radius: 30px;
 }
 
 /* footer */
@@ -280,6 +301,13 @@ h6 {
 @media (max-width: 992px) {
   body {
     background: lightcyan;
+  }
+  .project-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50px;
+    margin-top: 50px;
   }
 }
 
@@ -403,11 +431,5 @@ https://www.youtube.com/watch?v=OFKBep95lb4 */
   .project-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-columns: 0fr;
-    grid-gap: 30px;
-  }
-  .project-container .large {
-    grid-column: span 1;
-    border: 1px solid black;
   }
 }
