--- a/assets/style.css
+++ b/assets/style.css
@@ -193,9 +193,9 @@ li {
 }
 .project-card.large {
   width: 600px;
-  height: 500px;
-  box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.3);
-  margin: 30px;
+}
+.project-card.larger {
+  width: 900px;
 }
 .project-container {
   display: flex;
