--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,13 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap");
 
+:root {
+  --primaryColor1: #0c0e3f;
+  --primaryColor2: #171b85;
+  --secondaryColor1: #eb59a7;
+  --secondaryColor2: #922760;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,7 +18,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 footer {
-  background-color: #0c0e3f;
+  background-color: var(--primaryColor1);
   color: white;
   text-align: center;
   padding: 100px;
@@ -36,7 +43,7 @@ p {
 
 /* ============ Header Section ================== */
 .logo {
-  color: #eb59a7;
+  color: var(--secondaryColor1);
   font-family: playfair disney;
   font-weight: 600;
   font-size: 1.5rem;
@@ -47,7 +54,7 @@ nav {
   justify-content: space-between;
   height: 60px;
   align-items: center;
-  background-color: #0c0e3f;
+  background-color: var(--primaryColor1);
   color: white;
 }
 ul {
@@ -79,7 +86,7 @@ li {
   height: 100%;
   justify-content: space-between;
   align-items: center;
-  background-color: #0c0e3f;
+  background-color: var(--primaryColor1);
   color: #fff;
 }
 .hero-avatar {
@@ -95,7 +102,7 @@ li {
   margin-bottom: 200px;
 }
 .accent {
-  color: #eb59a7;
+  color: var(--secondaryColor1);
 }
 .hero p {
   font-weight: 500;
@@ -109,7 +116,7 @@ li {
   text-transform: uppercase;
   letter-spacing: 1px;
   padding: 1.25rem 5rem;
-  background-color: #eb59a7;
+  background-color: var(--secondaryColor1);
   color: #fff;
   border: none;
   border-radius: 30px;
@@ -163,7 +170,7 @@ li {
 }
 /* ============ Skills Section ================== */
 .accent-section {
-  background-color: #0c0e3f;
+  background-color: var(--primaryColor1);
   color: white;
 }
 .skill-container {
@@ -209,7 +216,7 @@ li {
 .project-information a {
   text-transform: uppercase;
   padding: 0.5rem 1rem;
-  background-color: #eb59a7;
+  background-color: var(--secondaryColor1);
   color: #fff;
   border-radius: 30px;
 }
@@ -238,13 +245,13 @@ hr {
 }
 .project-link {
   text-decoration: none;
-  color: #0c0e3f;
+  color: var(--primaryColor1);
   text-transform: uppercase;
   font-weight: 500;
 }
 .thankyou-page {
-  background-color: #0c0e3f;
-  color: #eb59a7;
+  background-color: var(--primaryColor1);
+  color: var(sec);
   height: 1200px;
   display: flex;
   align-items: center;
@@ -320,10 +327,10 @@ code has been adjusted and re-designed for this portfolio */
     width: 100%;
     flex-direction: column;
     transition: 0.5s;
-    background: #0c0e3f;
+    background: var(--primaryColor1);
     display: flex;
     align-items: center;
-    background-color: #eb59a7;
+    background-color: var(--secondaryColor1);
   }
   #nav-list.visible {
     display: none;
