--- a/assets/style.css
+++ b/assets/style.css
@@ -251,6 +251,7 @@ li {
 .project-information {
   display: flex;
   flex-direction: column;
+  max-width: 600px;
 }
 .project-information a {
   text-transform: uppercase;
@@ -271,17 +272,10 @@ li {
   font-weight: 300;
 }
 .project-image {
-  width: 300px;
+  width: 100%;
   height: 300px;
   object-fit: cover;
   border-radius: 30px;
-}
-
-.project-image-large {
-  border-radius: 30px;
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
 }
 
 hr {
